--- a/notebooks_rtcc/extract_rtcc_item_nos.ipynb
+++ b/notebooks_rtcc/extract_rtcc_item_nos.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "def read_txt_f():\n",
     "    df = pd.read_csv(\n",
-    "        (\"../data/rtcc/rtcc_11_29_2022.txt\"),\n",
+    "        (\"../data/join_rtcc_tables/rtcc_11_29_2022.txt\"),\n",
     "        sep=\"delimiter\",\n",
     "        header=None,\n",
     "        engine=\"python\",\n",
@@ -163,10 +163,10 @@
    "outputs": [],
    "source": [
     "dfa = df.pipe(clean_item_nos)\n",
-    "dfb = pd.read_csv(\"../data/rtcc/rtcc_3_29_2022.csv\", encoding=\"cp1252\")\n",
+    "dfb = pd.read_csv(\"../data/join_rtcc_tables/rtcc_3_29_2022.csv\", encoding=\"cp1252\")\n",
     "\n",
     "df = pd.concat([dfa, dfb])\n",
-    "# df.to_csv(\"../data/rtcc/rtcc.csv\", index=False)"
+    "# df.to_csv(\"../data/join_rtcc_tables/rtcc.csv\", index=False)"
    ]
   }
  ],
