--- a/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
+++ b/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,25 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean():\n",
-    "    dfa = pd.read_csv(\"../data/electronic_police_report_2018_2022.csv\")\n",
+    "    dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n",
     "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "    \n",
-    "    dfb = pd.read_csv(\"../data/rtcc.csv\")\n",
+    "    dfb = pd.read_csv(\"../data/real_time_crime_center/rtcc.csv\")\n",
     "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "    dfb[\"rtcc_footage_requested\"] = \"yes\"\n",
     "\n",
     "    df = pd.merge(dfb, dfa, on=\"item_number\")\n",
-    "    return dfb"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,24 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3338: DtypeWarning: Columns (21) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  if await self.run_code(code, result, async_=asy):\n"
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_17684\\359145378.py:2: DtypeWarning: Columns (14,20,24,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(21615, 3)"
+       "(22742, 28)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,48 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'offender_race'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\PC\\Desktop\\eos\\nopd_cameras\\notebooks\\rtcc_footage_request_rates_youth.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mpipe(drop_rows_missing_offender_race)\u001b[39m.\u001b[39mdrop_duplicates(subset\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39moffender_race\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39moffender_gender\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mitem_number\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5406\u001b[0m, in \u001b[0;36mNDFrame.pipe\u001b[1;34m(self, func, *args, **kwargs)\u001b[0m\n\u001b[0;32m   5353\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[0;32m   5354\u001b[0m \u001b[39m@doc\u001b[39m(klass\u001b[39m=\u001b[39m_shared_doc_kwargs[\u001b[39m\"\u001b[39m\u001b[39mklass\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m   5355\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpipe\u001b[39m(\u001b[39mself\u001b[39m, func, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m   5356\u001b[0m     \u001b[39mr\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   5357\u001b[0m \u001b[39m    Apply func(self, \\*args, \\*\\*kwargs).\u001b[39;00m\n\u001b[0;32m   5358\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5404\u001b[0m \u001b[39m    ...  )  # doctest: +SKIP\u001b[39;00m\n\u001b[0;32m   5405\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5406\u001b[0m     \u001b[39mreturn\u001b[39;00m com\u001b[39m.\u001b[39mpipe(\u001b[39mself\u001b[39m, func, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\common.py:440\u001b[0m, in \u001b[0;36mpipe\u001b[1;34m(obj, func, *args, **kwargs)\u001b[0m\n\u001b[0;32m    438\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    439\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 440\u001b[0m     \u001b[39mreturn\u001b[39;00m func(obj, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;32mc:\\Users\\PC\\Desktop\\eos\\nopd_cameras\\notebooks\\rtcc_footage_request_rates_youth.ipynb Cell 6\u001b[0m in \u001b[0;36mdrop_rows_missing_offender_race\u001b[1;34m(df)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdrop_rows_missing_offender_race\u001b[39m(df):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     df\u001b[39m.\u001b[39mloc[:, \u001b[39m\"\u001b[39m\u001b[39moffender_race\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49moffender_race\u001b[39m.\u001b[39mfillna(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mlower()\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mstrip()\\\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39munknown\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m, regex\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\\\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m# .str.replace(\"hispanic\", \"\", regex=False)\\\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m# .str.replace(\"asian\", \"\", regex=False)\\\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m# .str.replace(r\"amer\\. ind\\.\", \"\", regex=True)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/eos/nopd_cameras/notebooks/rtcc_footage_request_rates_youth.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m df[\u001b[39m~\u001b[39m((df\u001b[39m.\u001b[39moffender_race \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m))]\n",
-      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5465\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5463\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name):\n\u001b[0;32m   5464\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5465\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'offender_race'"
-     ]
-    }
-   ],
-   "source": [
-    "df = df.pipe(drop_rows_missing_offender_race).drop_duplicates(subset=[\"offender_race\", \"offender_gender\",\"offender_age\", \"item_number\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['item_number', 'Signal Code', 'rtcc_footage_requested', 'district',\n",
-       "       'location', 'disposition', 'signal_type', 'signal_description',\n",
-       "       'occurred_date_time', 'charge_code', 'charge_description',\n",
-       "       'offender_race', 'offender_gender', 'offender_age', 'offender_number',\n",
-       "       'person_type', 'victim_race', 'victim_gender', 'victim_age',\n",
-       "       'victim_number', 'victim_fatal_status', 'hate_crime', 'report_type',\n",
-       "       'year', 'offenderid', 'offenderstatus', 'persontype'],\n",
+       "Index(['item_number', 'Signal Code', 'rtcc_footage_requested', 'Unnamed: 0',\n",
+       "       'district', 'location', 'disposition', 'signal_type',\n",
+       "       'signal_description', 'occurred_date_time', 'charge_code',\n",
+       "       'charge_description', 'offender_race', 'offender_gender',\n",
+       "       'offender_age', 'offender_number', 'person_type', 'victim_race',\n",
+       "       'victim_gender', 'victim_age', 'victim_number', 'victim_fatal_status',\n",
+       "       'hate_crime', 'report_type', 'year', 'offenderid', 'offenderstatus',\n",
+       "       'persontype'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,16 +154,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.pipe(drop_rows_missing_offender_race).drop_duplicates(subset=[\"offender_race\", \"offender_gender\",\"offender_age\", \"item_number\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8215, 27)"
+       "Index(['item_number', 'Signal Code', 'rtcc_footage_requested', 'Unnamed: 0',\n",
+       "       'district', 'location', 'disposition', 'signal_type',\n",
+       "       'signal_description', 'occurred_date_time', 'charge_code',\n",
+       "       'charge_description', 'offender_race', 'offender_gender',\n",
+       "       'offender_age', 'offender_number', 'person_type', 'victim_race',\n",
+       "       'victim_gender', 'victim_age', 'victim_number', 'victim_fatal_status',\n",
+       "       'hate_crime', 'report_type', 'year', 'offenderid', 'offenderstatus',\n",
+       "       'persontype'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4765, 28)"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2567, 27)"
+       "(2787, 28)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,24 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['21.0', '23.0', '22.0', '25.0', '43.0', '16.0', '36.0', '30.0',\n",
-       "       '41.0', '19.0', '33.0', '40.0', '24.0', '17.0', '28.0', '35.0',\n",
-       "       '31.0', '20.0', '58.0', '18.0', '32.0', '44.0', '15.0', '39.0',\n",
-       "       '26.0', '38.0', '27.0', '34.0', '45.0', '50.0', '63.0', '56.0',\n",
-       "       '42.0', '29.0', '47.0', '52.0', '48.0', '55.0', '53.0', '37.0',\n",
-       "       '60.0', '46.0', '14.0', '51.0', '49.0', '57.0', '13.0', '61.0',\n",
+       "array(['21.0', '23.0', '19.0', '22.0', '25.0', '43.0', '16.0', '36.0',\n",
+       "       '30.0', '41.0', '33.0', '40.0', '24.0', '17.0', '28.0', '35.0',\n",
+       "       '31.0', '20.0', '58.0', '18.0', '32.0', '29.0', '44.0', '15.0',\n",
+       "       '39.0', '38.0', '27.0', '26.0', '34.0', '48.0', '45.0', '50.0',\n",
+       "       '63.0', '42.0', '47.0', '52.0', '55.0', '53.0', '37.0', '60.0',\n",
+       "       '46.0', '56.0', '14.0', '51.0', '13.0', '49.0', '57.0', '61.0',\n",
        "       '69.0', '66.0', '67.0', '68.0', '59.0', '54.0', '62.0', '64.0',\n",
        "       '70.0', '11.0', '12.0', '65.0', '2.0', '83.0', '10.0', '71.0',\n",
        "       '75.0'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2567"
+       "2787"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "372"
+       "443"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14.49162446435528"
+       "15.895227843559384"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,20 +322,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BLACK       0.975806\n",
-       "WHITE       0.016129\n",
-       "HISPANIC    0.005376\n",
-       "UNKNOWN     0.002688\n",
+       "black       0.979684\n",
+       "white       0.015801\n",
+       "hispanic    0.004515\n",
        "Name: offender_race, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11 (tags/v3.9.11:2de452f, Mar 16 2022, 14:33:45) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4,
   "vscode": {
