--- a/notebooks_rtcc/rtcc_police_reports_locations.ipynb
+++ b/notebooks_rtcc/rtcc_police_reports_locations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean():\n",
-    "    dfa = pd.read_csv(\"../data/electronic_police_report_2018_2022.csv\")\n",
+    "    dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n",
     "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
-    "    dfb = pd.read_csv(\"../data/rtcc.csv\")\n",
+    "    dfb = pd.read_csv(\"../data/real_time_crime_center/rtcc.csv\")\n",
     "    dfb[\"rtcc_requested\"] = \"1\"\n",
     "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_2456\\2956121570.py:2: DtypeWarning: Columns (14,20,24,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dfa = pd.read_csv(\"../data/electronic_police_report_2018_2022.csv\")\n"
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_2456\\153542535.py:2: DtypeWarning: Columns (14,20,24,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     }
    ],
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_2456\\3116303225.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_2456\\1998154791.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df.loc[:, \"location\"] = df.location.str.replace(r\"(\\w+)$\", r\"\\1, New Orleans, Louisiana\")\n"
      ]
     }
@@ -71,59 +71,59 @@
     "requested_3 = requested[10000:15000]\n",
     "requested_4 = requested[15000:]\n",
     "\n",
-    "# requested_1.to_csv(\"../data/rtcc_locations_1.csv\", index=False)\n",
-    "# requested_2.to_csv(\"../data/rtcc_locations_2.csv\", index=False)\n",
-    "# requested_3.to_csv(\"../data/rtcc_locations_3.csv\", index=False)\n",
-    "# requested_4.to_csv(\"../data/rtcc_locations_4.csv\", index=False)"
+    "# requested_1.to_csv(\"../data/real_time_crime_center/rtcc_locations_1.csv\", index=False)\n",
+    "# requested_2.to_csv(\"../data/real_time_crime_center/rtcc_locations_2.csv\", index=False)\n",
+    "# requested_3.to_csv(\"../data/real_time_crime_center/rtcc_locations_3.csv\", index=False)\n",
+    "# requested_4.to_csv(\"../data/real_time_crime_center/rtcc_locations_4.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
-    "requested_1_coordinates = pd.read_csv(\"../data/rtcc_locations_1_coordinates.csv\")\n",
-    "requested_1_df = pd.read_csv(\"../data/rtcc_locations_1.csv\")\n",
+    "requested_1_coordinates = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_1_coordinates.csv\")\n",
+    "requested_1_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_1.csv\")\n",
     "rtcc_1 = pd.concat([requested_1_df, requested_1_coordinates], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
-    "requested_2_coordinates_df = pd.read_csv(\"../data/rtcc_locations_2_coordinates.csv\")\n",
-    "requested_2_df = pd.read_csv(\"../data/rtcc_locations_2.csv\")\n",
+    "requested_2_coordinates_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_2_coordinates.csv\")\n",
+    "requested_2_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_2.csv\")\n",
     "rtcc_2 = pd.concat([requested_2_df, requested_2_coordinates_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
-    "requested_3_coordinates_df = pd.read_csv(\"../data/rtcc_locations_3_coordinates.csv\")\n",
-    "requested_3_df = pd.read_csv(\"../data/rtcc_locations_3.csv\")\n",
+    "requested_3_coordinates_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_3_coordinates.csv\")\n",
+    "requested_3_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_3.csv\")\n",
     "rtcc_3 = pd.concat([requested_3_df, requested_3_coordinates_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
-    "requested_4_coordinates_df = pd.read_csv(\"../data/rtcc_locations_4_coordinates.csv\")\n",
-    "requested_4_df = pd.read_csv(\"../data/rtcc_locations_4.csv\")\n",
+    "requested_4_coordinates_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_4_coordinates.csv\")\n",
+    "requested_4_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_locations_4.csv\")\n",
     "rtcc_4 = pd.concat([requested_4_df, requested_4_coordinates_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,27 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# coordinates_df.to_csv(\"../data/rtcc_coordinates.csv\", index=False)"
+    "# coordinates_df.to_csv(\"../data/real_time_crime_center/rtcc_coordinates.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinates_df = pd.read_csv(\"../data/rtcc_coordinates.csv\")\n",
+    "coordinates_df = pd.read_csv(\"../data/real_time_crime_center/rtcc_coordinates.csv\")\n",
     "coordinates_df = coordinates_df.rename(columns={\"0\": \"latitude\", \"1\": \"longitude\"})\n",
     "coordinates_df = coordinates_df[[\"item_number\", \"latitude\", \"longitude\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +186,8 @@
     "day = day[[\"latitude\", \"longitude\", \"item_number\"]]\n",
     "\n",
     "\n",
-    "night.to_csv(\"../data/rtcc_requested_locations_night.csv\")\n",
-    "day.to_csv(\"../data/rtcc_requested_locations_day.csv\")"
+    "# night.to_csv(\"../data/real_time_crime_center/rtcc_requested_locations_night.csv\")\n",
+    "# day.to_csv(\"../data/real_time_crime_center/rtcc_requested_locations_day.csv\")"
    ]
   }
  ],
