added new rtcc data

--- a/notebooks_epr/extract_rtcc_item_nos.ipynb
+++ b/notebooks_epr/extract_rtcc_item_nos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_txt_f():\n",
+    "def read_3_29_2022():\n",
     "    df = pd.read_csv(\n",
-    "        (\"../data/join_rtcc_tables/rtcc_11_29_2022.txt\"),\n",
+    "        (\"../data/join_rtcc_tables/rtcc_11_22_2022.txt\"),\n",
+    "        sep=\"delimiter\",\n",
+    "        header=None,\n",
+    "        engine=\"python\",\n",
+    "        index_col=False,\n",
+    "    )\n",
+    "    df = (\n",
+    "        df\\\n",
+    "        .rename(columns={df.columns[0]: \"item_number\"})\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "def read_3_2_2023():\n",
+    "    df = pd.read_csv(\n",
+    "        (\"../data/join_rtcc_tables/rtcc_3-2-2023.txt\"),\n",
     "        sep=\"delimiter\",\n",
     "        header=None,\n",
     "        engine=\"python\",\n",
@@ -32,121 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_txt_f()"
+    "dfa = read_3_29_2022()\n",
+    "dfc = read_3_2_2023()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>,0,1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0,0,\"Item / Case Number Signal Code</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>D-02074-22 20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>D-02226-22 103F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>D-02336-22 107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6692</th>\n",
-       "      <td>348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6693</th>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6694</th>\n",
-       "      <td>30S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6695</th>\n",
-       "      <td>67A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6696</th>\n",
-       "      <td>67P\"</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6697 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              item_number\n",
-       "0                                    ,0,1\n",
-       "1     0,0,\"Item / Case Number Signal Code\n",
-       "2                           D-02074-22 20\n",
-       "3                         D-02226-22 103F\n",
-       "4                          D-02336-22 107\n",
-       "...                                   ...\n",
-       "6692                                  348\n",
-       "6693                                  100\n",
-       "6694                                  30S\n",
-       "6695                                  67A\n",
-       "6696                                 67P\"\n",
-       "\n",
-       "[6697 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfa = df.pipe(clean_item_nos)\n",
-    "dfb = pd.read_csv(\"../data/join_rtcc_tables/rtcc_3_29_2022.csv\", encoding=\"cp1252\")\n",
     "\n",
-    "df = pd.concat([dfa, dfb])\n",
-    "# df.to_csv(\"../data/join_rtcc_tables/rtcc.csv\", index=False)"
+    "dfa = dfa.pipe(clean_item_nos)\n",
+    "dfb = pd.read_csv(\"../data/join_rtcc_tables/rtcc_3_29_2022.csv\", encoding=\"cp1252\")\n",
+    "dfc = dfc.pipe(clean_item_nos)\n",
+    "\n",
+    "df = pd.concat([dfa, dfb, dfc])\n",
+    "df\n",
+    "df.to_csv(\"../data/join_rtcc_tables/rtcc.csv\", index=False)"
    ]
   }
  ],
@@ -186,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
