--- a/notebooks_epr/ocr.ipynb
+++ b/notebooks_epr/ocr.ipynb
@@ -82,25 +82,21 @@
      "text": [
       "Will use tool 'Tesseract (sh)'\n",
       "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
-      "Will use language 'eng'\n",
-      "Will use tool 'Tesseract (sh)'\n",
-      "Available languages: eng, osd\n",
       "Will use language 'eng'\n"
+     ]
+    },
+    {
+     "ename": "CacheError",
+     "evalue": "unable to extend cache 'C:/Users/PC/AppData/Local/Temp/magick-nQ9JG49GVZJhm41L6SmkBWO6yDB91eHV72': No space left on device @ error/cache.c/OpenPixelCache/3910",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCacheError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ocr \u001b[39m=\u001b[39m ocr_pdfs()\n",
+      "Cell \u001b[1;32mIn [2], line 20\u001b[0m, in \u001b[0;36mocr_pdfs\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m req_image \u001b[39m=\u001b[39m []\n\u001b[0;32m     18\u001b[0m final_text \u001b[39m=\u001b[39m {}\n\u001b[1;32m---> 20\u001b[0m \u001b[39mwith\u001b[39;00m WImage(filename\u001b[39m=\u001b[39;49mfile, resolution\u001b[39m=\u001b[39;49m\u001b[39m300\u001b[39;49m) \u001b[39mas\u001b[39;00m image_pdf:\n\u001b[0;32m     21\u001b[0m     image_jpeg \u001b[39m=\u001b[39m image_pdf\u001b[39m.\u001b[39mconvert(\u001b[39m\"\u001b[39m\u001b[39mpdf\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\wand\\image.py:9347\u001b[0m, in \u001b[0;36mImage.__init__\u001b[1;34m(self, image, blob, file, filename, pseudo, background, colorspace, depth, extract, format, height, interlace, resolution, sampling_factors, units, width)\u001b[0m\n\u001b[0;32m   9345\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msequence \u001b[39m=\u001b[39m Sequence(\u001b[39mself\u001b[39m)\n\u001b[0;32m   9346\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprofiles \u001b[39m=\u001b[39m ProfileDict(\u001b[39mself\u001b[39m)\n\u001b[1;32m-> 9347\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraise_exception()\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\wand\\resource.py:225\u001b[0m, in \u001b[0;36mResource.raise_exception\u001b[1;34m(self, stacklevel)\u001b[0m\n\u001b[0;32m    223\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(e, stacklevel\u001b[39m=\u001b[39mstacklevel \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m    224\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(e, \u001b[39mException\u001b[39;00m):\n\u001b[1;32m--> 225\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
+      "\u001b[1;31mCacheError\u001b[0m: unable to extend cache 'C:/Users/PC/AppData/Local/Temp/magick-nQ9JG49GVZJhm41L6SmkBWO6yDB91eHV72': No space left on device @ error/cache.c/OpenPixelCache/3910"
      ]
     }
    ],
@@ -125,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
